# flask-blog

./: .gitignore  .replit  LICENSE  README.md  app.py  blogsdb.py  login.py  logindatabase.py  main.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirement.txt  requirements.txt  tailwind.config.js  users_methods.py
static/assets/project_img/aws/: download.avif
static/css/: main.css
static/src/: input.css
templates/: admin.html  all_blogs.html  all_post.html  base.html  blogs.html  dashboard.html  footer.html  home.html  landingpage.html  login.html  register.html
templates/about/: about.html
templates/contact/: contact.html
templates/dashboardhtml/: dashboardbase.html
templates/normal_users/: user_dashboard.html  userbase.html  userdashboard.html
templates/projects/: list_projects.html  project_image.html  project_templates.html  projects.html
templates/subscribe/: subscribe.html
templates/users/: add_post.html  admin_users.html  drawer.html  edit_user.html  post_add.html  user_table_form.html
