[tool.poetry]
name = "repl-nix-flask-blog"
version = "0.1.0"
description = ""
authors = ["Jatin <datajatin90@gmail.com>"]
readme = "README.md"
packages = [{include = "repl_nix_flask_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-bcrypt = "^1.0.1"
sqlalchemy = "^2.0.29"
bcrypt = "^4.1.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
